@@ -4,8 +4,8 @@ namespace block_exaquest\output;
 
 use renderable;
 use renderer_base;
-use templatable;
 use stdClass;
+use templatable;
 
 class popup_questions_for_me_to_create implements renderable, templatable {
     /** @var string $questions_to_create Part of the data that should be passed to the template. */
@@ -29,12 +29,15 @@ class popup_questions_for_me_to_create implements renderable, templatable {
         // this would work, but is not feasable to write like this
         // The problem with $data->questions_to_create = $this->questions_to_create; is that there is an associative array, e.g. 3 => stdClass(), 10 => stdClass() etc.... it MUST start counting at 0, otherwise it will break mustache
         $data->questions_to_create = array_values($this->questions_to_create);
-        foreach ($data->questions_to_create as $id => $question){
+        foreach ($data->questions_to_create as $id => $question) {
             $question->comma = true;
         }
-        if(isset($data->questions_to_create) && !empty($data->questions_to_create)){
+        if (isset($data->questions_to_create) && !empty($data->questions_to_create)) {
             end($data->questions_to_create)->comma = false;
         }
+        $data->action =
+            $PAGE->url->out(false, array('action' => 'mark_as_done', 'sesskey' => sesskey(), 'courseid' => $COURSE->id));
+        $data->sesskey = sesskey();
         return $data;
     }
 }
