@@ -3,5 +3,5 @@
 defined('MOODLE_INTERNAL') || die();
 
 $plugin->component = 'block_exaquest';  // Recommended since 2.0.2 (MDL-26035). Required since 3.0 (MDL-48494)
-$plugin->version = 2023012400;
+$plugin->version = 2023012404;
 $plugin->requires = 2010112400;
