@@ -1,6 +1,7 @@
 #####################################
 xxxxx
--Links in review notification added
+-Links in review and revise notifications added
+-Fachlich and Formal reviewed questions counts added to dashboard
 #####################################
 #####################################
 2023012000
